--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "browser": {
+    "crypto": false
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
@@ -18,6 +21,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "a-nonce-generator": "^2.0.1",
+    "crypto-js": "^4.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,8 +31,10 @@
     "@angular-devkit/build-angular": "~12.2.11",
     "@angular/cli": "~12.2.11",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/crypto-js": "^4.0.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/randomstring": "^1.1.8",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
