--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.2.0",
     "a-nonce-generator": "^2.0.1",
     "crypto-js": "^4.1.1",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -33,6 +34,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/crypto-js": "^4.0.2",
     "@types/jasmine": "~3.8.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.11.1",
     "@types/randomstring": "^1.1.8",
     "jasmine-core": "~3.8.0",
